<resources>
    <string name="app_name">Cracker</string>
    <string name="icon_smile">icon smile</string>
    <string name="skip">Skip</string>
    <string name="welcome_description">This is a welcome screen specially for KTS</string>
    <string name="skip_toast">Skip nothing…</string>
    <string name="welcome">Welcome</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="icon_log_in">icon log in</string>
    <string name="home">Home</string>
    <string name="log_in">Log In</string>
    <string name="error_email">invalid email address</string>
    <string name="error_password">invalid password</string>
    <string name="on_boarding_image">on boarding image</string>
    <string name="app_icon">app icon</string>
    <string name="icon_comments">icon_comments</string>
    <string name="like">like</string>
    <string name="share">Share</string>
    <string name="main_image">main image</string>
    <string name="data_could_not_be_loaded">Result could not be loaded</string>
    <string name="retry">retry</string>
    <string name="unvoted">unvoted</string>
    <string name="dislike">dislike</string>
    <string name="continue_with_reddit">Continue with Reddit</string>
    <string name="auth_canceled">Authentication failed</string>
    <string name="favorite">favorite</string>
    <string name="join">Join</string>
    <string name="posted_by">Posted by %1$s</string>
    <string name="post_saved_error">Failed to save</string>
    <string name="post_unsaved_error">failed to delete save</string>
    <string name="vote_error">failed to vote</string>
    <string name="post_saved">Post saved!</string>
    <string name="post_unsaved">Post unsaved!</string>
    <string name="toast_icon">toast icon</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="data_from_the_cache">Data from the cache</string>
    <string name="splashscreen_image">splash screen image</string>
    <string name="search">Search</string>
    <string name="content_description_search">search description</string>
    <string name="logout">logout</string>
    <string name="header_image">header image</string>
    <string name="profile_icon">profile icon</string>
    <string name="logout_failure">logout failure</string>
    <string name="logout_dialog_text">Are you sure you want to get out? All local data will be deleted!</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="data_acquisition_error">data acquisition error</string>
    <string name="posts">Posts</string>
    <string name="comments">Comments</string>
    <string name="about">About</string>
    <string name="karma">%1$d karma</string>
    <string name="separator">•</string>
    <string name="try_again">Let\'s try that again</string>
    <string name="trouble_loading_data">We had some trouble loading the data. Please try again.</string>
    <string name="progress_indicator">progress indicator</string>
    <string name="popular">Popular</string>
    <string name="profile">Profile</string>
    <string name="all">All</string>
    <string name="saved">Saved</string>
    <string name="sorted_by">sorted by</string>
    <string name="settings">Settings</string>
    <string name="subscribers">Subscribers</string>
    <string name="button_back">button back</string>
    <string name="delete_button">delete button</string>
    <string name="joined">joined</string>
    <string name="members">%1$d members</string>
    <string name="online">%1$d online</string>
    <string name="search_results">Search results</string>
    <string name="error_subscribing_to_a_subreddit">Error subscribing to a subreddit</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="sorted_posts_by">sorted posts by</string>
    <string name="sorted_posts">%1$s POSTS</string>
    <string name="best">best</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_karma">Post Karma</string>
    <string name="awarder_karma">Awarder Karma</string>
    <string name="comments_karma">Comments Karma</string>
    <string name="awardee_karma">Awardee Karma</string>
</resources>