<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/groupListing">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/home" />

        <item
            android:id="@+id/popular"
            android:icon="@drawable/ic_show_chart_24"
            android:title="@string/popular" />

        <item
            android:id="@+id/all"
            android:icon="@drawable/ic_bar_chart_24"
            android:title="@string/all" />

        <item
            android:id="@+id/saved"
            android:icon="@drawable/ic_bookmarks_24"
            android:title="@string/saved" />
    </group>

    <group android:id="@+id/groutAccount">

        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_account_circle_24"
            android:title="@string/profile" />

    </group>
</menu>