<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_scrollFlags="scroll|exitUntilCollapsed">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Container">

            <ImageView
                android:id="@+id/bannerImageView"
                android:layout_width="match_parent"
                android:layout_height="152dp"
                android:contentDescription="@string/header_image"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/header_image" />

            <ImageView
                android:id="@+id/avatarImageView"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal|bottom"
                android:background="@android:color/transparent"
                android:contentDescription="@string/profile_icon"
                android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0"
                android:src="@drawable/ic_subreddit_24"
                app:layout_constraintBottom_toBottomOf="@+id/bannerImageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bannerImageView" />

            <Button
                android:id="@+id/bottomJoin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/join"
                android:backgroundTint="@color/arcDarkLink"
                app:layout_constraintBottom_toBottomOf="@+id/bannerImageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bannerImageView" />

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avatarImageView"
                tools:text="r/Kotlin" />

            <TextView
                android:id="@+id/membersTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="6dp"
                android:textSize="12sp"
                android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintEnd_toStartOf="@+id/separator"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameTextView"
                tools:text="55702 members" />

            <TextView
                android:id="@+id/separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/separator"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/onlineCountTextView"
                app:layout_constraintStart_toEndOf="@+id/membersTextView"
                app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

            <TextView
                android:id="@+id/onlineCountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="6dp"
                android:layout_marginTop="6dp"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/separator"
                app:layout_constraintTop_toBottomOf="@+id/nameTextView"
                tools:text="69 online" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/headerTabLayout"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="6dp"
                android:theme="@style/TabsCracker"
                app:labelVisibilityMode="labeled"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/membersTextView">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/posts" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about" />

            </com.google.android.material.tabs.TabLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_marginTop="30dp"
            android:theme="@style/MaterialToolbarProfileCracker"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back_24" />

    </com.google.android.material.appbar.CollapsingToolbarLayout>

</com.google.android.material.appbar.AppBarLayout>
