<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ProfileAboutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:theme="@style/Container">

        <TextView
            android:id="@+id/postKarmaTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/commentsKarmaTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="149" />

        <TextView
            android:id="@+id/postKarmaTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/post_karma"
            app:layout_constraintEnd_toStartOf="@+id/commentsKarmaTitleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postKarmaTextView" />

        <TextView
            android:id="@+id/awarderKarmaTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/awardeeKarmaTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postKarmaTitleTextView"
            tools:text="36" />

        <TextView
            android:id="@+id/awarderKarmaTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/awarder_karma"
            app:layout_constraintEnd_toStartOf="@+id/awardeeKarmaTitleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/awarderKarmaTextView" />


        <TextView
            android:id="@+id/commentsKarmaTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/postKarmaTextView"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="11" />

        <TextView
            android:id="@+id/commentsKarmaTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/comments_karma"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/postKarmaTitleTextView"
            app:layout_constraintTop_toBottomOf="@+id/commentsKarmaTextView" />

        <TextView
            android:id="@+id/awardeeKarmaTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/awarderKarmaTextView"
            app:layout_constraintTop_toBottomOf="@+id/postKarmaTitleTextView"
            tools:text="29" />

        <TextView
            android:id="@+id/awardeeKarmaTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/awardee_karma"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/awarderKarmaTitleTextView"
            app:layout_constraintTop_toBottomOf="@+id/awardeeKarmaTextView" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/karmaBottomBarrier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="awarderKarmaTextView,awarderKarmaTitleTextView,awardeeKarmaTextView,awardeeKarmaTitleTextView" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>